Use percentages and vw to prevent breaks on smaller screens.

--- a/public/assets/sass/partials/_features.sass
+++ b/public/assets/sass/partials/_features.sass
@@ -114,6 +114,8 @@
         font-size: 45px
         width: 430px
         margin-bottom: 1em
+        width: 85%
+        font-size: 3.3vw
 
       .subheader
         color: #fff
@@ -134,12 +136,13 @@
         top: -1.5em
         margin-left: 2em
         text-align: left
+        width: 50%
 
       .image
         content: ""
         display: inline-block
         height: 150px
-        width: 150px
+        width: 30%
         background-repeat: no-repeat
         background-size: contain
         background-position: center
@@ -164,7 +167,7 @@
       p
         margin-left: 0.8em
       .image
-        width: 205px
+        width: 41%
         margin-left: -30px
         background-image: image-url('/assets/images/PNG/Homepage-employers-graph2.png')
         background-image: image-url('/assets/images/SVG/Homepage-employers-graph2.svg')
@@ -182,12 +185,13 @@
     .description
       p
         width: 225px
-
+        width: 45%
       .row-1
         p
           margin-left: 0.8em
         .image
           width: 175px
+          width: 35%
           margin-left: 1px
           background-image: image-url('/assets/images/PNG/Homepage-employees-graph1.png')
           background-image: image-url('/assets/images/SVG/Homepage-employees-graph1.svg')
@@ -196,6 +200,7 @@
           margin-left: 0.8em
         .image
           width: 195px
+          width: 38%
           margin-left: -18px
           background-image: image-url('/assets/images/PNG/Homepage-employees-graph2.png')
           background-image: image-url('/assets/images/SVG/Homepage-employees-graph2.svg')
